# claude-code-remote

./: .all-contributorsrc  .dockerignore  .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  compose.yml  config.example.toml  shell.nix
.claude/agents/: architect.md  reviewer.md  scout.md  verifier.md
.claude/skills/deploy/: SKILL.md
.claude/skills/fetchmaster/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/work/: SKILL.md
migrations/: 001_initial.sql
scripts/: claude-wrapper.sh  deploy-remote.example.sh  deploy.sh  run-ubuntu.sh
src/: config.rs  db.rs  domain.rs  error.rs  lib.rs  main.rs
src/claude/: context.rs  mod.rs  oauth.rs  parser.rs  process.rs  session.rs  worktree.rs
src/discord/: commands.rs  formatter.rs  handler.rs  mod.rs
