[package]
name = "claude-crew"
version = "0.8.0"
edition = "2024"
authors = ["jasdian <business@quantdevlabs.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
poise = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
smallvec = { version = "1", features = ["serde"] }
dashmap = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
